# setrs

./: Cargo.toml  README.md
benches/: benchmark.rs  solvers.rs
src/: engine.rs  game.rs  lib.rs  oracle.rs
src/solvers/: mod.rs  oracle.rs  simple.rs  sweep.rs
